# influxdb3-plugin-sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  RELEASE.md  SECURITY.md  clippy.toml  deny.toml  justfile
docs/: .gitignore  (+5 more)
influxdb3-plugin-cli/: Cargo.toml  README.md  build.rs
influxdb3-plugin-cli/examples/: embedding_host.rs
influxdb3-plugin-cli/src/: cli_error.rs  color.rs  config.rs  diag_render.rs  exit.rs  lib.rs  main.rs  path_display.rs  style.rs
influxdb3-plugin-cli/src/commands/: index.rs  mod.rs  new.rs  package.rs  validate.rs  yank.rs
influxdb3-plugin-cli/src/output/: error_mapping.rs  human.rs  json.rs  mod.rs
influxdb3-plugin-cli/tests/: color_smoke.rs  cross_cutting.rs  exit_classification.rs  index_smoke.rs  new_smoke.rs  package_failure_reporting.rs  package_smoke.rs  validate_smoke.rs  validate_stderr_discipline.rs  version_smoke.rs  yank_smoke.rs
influxdb3-plugin-cli/tests/common/: mod.rs
influxdb3-plugin-cli/tests/snapshots/: cross_cutting__help_index.snap  cross_cutting__help_index_info.snap  cross_cutting__help_index_search.snap  cross_cutting__help_info.snap  cross_cutting__help_new.snap  cross_cutting__help_package.snap  cross_cutting__help_search.snap  cross_cutting__help_top.snap  cross_cutting__help_validate.snap  cross_cutting__help_yank.snap  index_smoke__index_info_filtered_out_json.snap  index_smoke__index_info_found_json.snap  index_smoke__index_info_not_found_json.snap  index_smoke__index_search_json.snap  new_smoke__new_index_json.snap  new_smoke__new_list_json.snap  new_smoke__new_process_request_json.snap  new_smoke__new_process_scheduled_call_json.snap  new_smoke__new_process_writes_json.snap  new_smoke__new_registry_json.snap  package_smoke__package_success.snap  validate_smoke__validate_ambiguous_entry_point_json.snap  validate_smoke__validate_async_trigger_json.snap  validate_smoke__validate_happy_path_json.snap  validate_smoke__validate_missing_init_json.snap  validate_smoke__validate_multi_defect_json.snap  validate_smoke__validate_name_version_conflict_json.snap  validate_smoke__validate_no_entry_point_json.snap  validate_smoke__validate_single_file_missing_trigger_json.snap  validate_smoke__validate_valid_single_file_plugin_json.snap  yank_smoke__yank_already_in_desired_state_json.snap  yank_smoke__yank_already_yanked_json.snap  yank_smoke__yank_transitioned_json.snap  yank_smoke__yank_undo_transitioned_json.snap
influxdb3-plugin-schemas/: Cargo.toml  README.md
influxdb3-plugin-schemas/src/: error.rs  identity.rs  index.rs  index_query.rs  lib.rs  manifest.rs  path.rs  plugin_format.rs  raw.rs  validate.rs
influxdb3-plugin-schemas/src/snapshots/: influxdb3_plugin_schemas__error__tests__display_shape.snap  influxdb3_plugin_schemas__error__tests__schema_errors_multiple.snap  influxdb3_plugin_schemas__error__tests__schema_errors_single.snap  influxdb3_plugin_schemas__error__tests__variant_tags.snap  influxdb3_plugin_schemas__identity__plugin_id_tests__plugin_id_display.snap  influxdb3_plugin_schemas__index__canonical_serialization_tests__canonical_full_shape.snap  influxdb3_plugin_schemas__manifest__manifest_parse_tests__full_manifest_parsed.snap  influxdb3_plugin_schemas__plugin_format__tests__validation_error_display.snap  influxdb3_plugin_schemas__plugin_format__tests__validation_error_variant_tags.snap  influxdb3_plugin_schemas__validate__tests__validation_error_display.snap  influxdb3_plugin_schemas__validate__tests__validation_error_variant_tags.snap
influxdb3-plugin-schemas/tests/: determinism.rs  fuzz_index.rs  fuzz_manifest.rs  index_canon_equivalence.rs  index_canon_idempotent.rs  index_canon_roundtrip.rs  manifest_roundtrip.rs  manifest_validation_idempotence.rs  parse_fixtures.rs  pep508_stability.rs  round_trip.rs
influxdb3-plugin-schemas/tests/snapshots/: parse_fixtures__invalid_index_index_bad_database_version.json.snap  parse_fixtures__invalid_index_index_bad_hash.json.snap  parse_fixtures__invalid_index_index_bad_plugin_dep.json.snap  parse_fixtures__invalid_index_index_bad_published_at.json.snap  parse_fixtures__invalid_index_index_bad_scheme.json.snap  parse_fixtures__invalid_index_index_bad_url_scheme.json.snap  parse_fixtures__invalid_index_index_bad_version.json.snap  parse_fixtures__invalid_index_index_duplicate_entry.json.snap  parse_fixtures__invalid_index_index_duplicate_plugin_dep.json.snap  parse_fixtures__invalid_index_index_empty_triggers.json.snap  parse_fixtures__invalid_index_index_multi_defects.json.snap  parse_fixtures__invalid_index_index_unsupported_schema_version.json.snap  parse_fixtures__invalid_manifest_manifest_bad_database_version.toml.snap  parse_fixtures__invalid_manifest_manifest_bad_name.toml.snap  parse_fixtures__invalid_manifest_manifest_bad_pep508.toml.snap  parse_fixtures__invalid_manifest_manifest_bad_plugin_dep_scheme.toml.snap  parse_fixtures__invalid_manifest_manifest_bad_plugin_dep_version.toml.snap  parse_fixtures__invalid_manifest_manifest_bad_semver.toml.snap  parse_fixtures__invalid_manifest_manifest_bad_trigger.toml.snap  parse_fixtures__invalid_manifest_manifest_bad_url_scheme.toml.snap  parse_fixtures__invalid_manifest_manifest_duplicate_plugin_dep.toml.snap  parse_fixtures__invalid_manifest_manifest_exclude_non_string.toml.snap  parse_fixtures__invalid_manifest_manifest_exclude_not_array.toml.snap  parse_fixtures__invalid_manifest_manifest_multi_defects.toml.snap  parse_fixtures__invalid_manifest_manifest_too_long_description.toml.snap  parse_fixtures__valid_index_full_index.json.snap  parse_fixtures__valid_index_minimal_index.json.snap  parse_fixtures__valid_manifest_empty_exclude_manifest.toml.snap  (+3 more)
influxdb3-plugin-sdk/: Cargo.toml  README.md  build.rs
influxdb3-plugin-sdk/src/: archive.rs  error.rs  hash.rs  lib.rs  mutate_index.rs  package.rs  plugin_source_files.rs  scaffold.rs  validate.rs
influxdb3-plugin-sdk/tests/: archive_determinism.rs  boundary.rs  package_canonicalization.rs  package_smoke.rs  reproducibility_perturbations.rs  scaffold_smoke.rs  source_files_selection.rs  validate_smoke.rs
(+137 files in other folders)
