[workspace]
# In alphabetical order
members = [
    "influxdb3-plugin-cli",
    "influxdb3-plugin-schemas",
    "influxdb3-plugin-sdk",
]
default-members = ["influxdb3-plugin-cli"]
resolver = "3"

[workspace.package]
authors = ["InfluxData Developers"]
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Local deps. Breaking bumps in schemas (minor in 0.x, major in 1.x+)
# cascade through BOTH sdk (direct dep) and cli (direct dep + re-exports
# schemas types via cli/src/lib.rs); breaking bumps in sdk cascade
# through cli. Update the version constraints below in lockstep with any
# breaking bump; patch bumps resolve automatically under caret semantics.
influxdb3-plugin-schemas = { path = "influxdb3-plugin-schemas", version = "0.1.0-2.rc.0" }
influxdb3-plugin-sdk = { path = "influxdb3-plugin-sdk", version = "0.1.0-2.rc.0" }

# crates.io dependencies
anstyle = "1"
anyhow = "1"
clap = { version = "4.5.47", features = ["derive", "env"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
pep508_rs = "0.9"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
toml = "0.8"
tree-sitter = "0.26"
tree-sitter-python = "0.25"
unicode-normalization = "0.1"
url = { version = "2", features = ["serde"] }
walkdir = "2"

# dev-dependencies
assert_cmd = "2"
assert_matches = "1.5"
filetime = "0.2"
insta = { version = "1.46", features = ["json", "toml", "yaml"] }
predicates = "3"
pretty_assertions = "1.4"
proptest = { version = "1", default-features = false, features = ["std"] }
rstest = "0.26"
tempfile = "3"

[workspace.lints.rust]
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
unreachable_pub = "deny"
unused_crate_dependencies = "deny"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
todo = "deny"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"

[profile.dev.package.insta]
opt-level = 3
