[package]
name = "influxdb3-plugin-cli"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "InfluxDB 3 plugin SDK CLI — the `influxdb3-plugin` binary."
readme = "README.md"
build = "build.rs"
# publish = false until SDK ships to a public registry. License declared via
# [workspace.package]; no deny.toml carve-out required.
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "influxdb3-plugin"
path = "src/main.rs"

[dependencies]
anstyle.workspace = true
anyhow.workspace = true
clap.workspace = true
influxdb3-plugin-schemas.workspace = true
influxdb3-plugin-sdk.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
predicates.workspace = true
rstest.workspace = true
tempfile.workspace = true
toml.workspace = true

[build-dependencies]
serde_json.workspace = true

[lints]
workspace = true
