[package]
name = "influxdb3-plugin-cli"
version = "0.5.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "InfluxDB 3 author-side CLI for templating, validating, and packaging InfluxDB 3 plugins."
repository = "https://github.com/influxdata/influxdb3-plugin-sdk"
publish = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "influxdb3-plugin"
path = "src/main.rs"

[dependencies]
anstyle.workspace = true
anyhow.workspace = true
clap.workspace = true
influxdb3-plugin-schemas.workspace = true
influxdb3-plugin-sdk.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
flate2.workspace = true
insta.workspace = true
pep508_rs.workspace = true
predicates.workspace = true
rstest.workspace = true
tar.workspace = true
tempfile.workspace = true
toml.workspace = true
url.workspace = true

[build-dependencies]
serde_json.workspace = true

[lints]
workspace = true
