[package]
name = "influxdb3-plugin-schemas"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Schema types for InfluxDB 3 plugin manifests and indexes."
readme = "README.md"
# publish = false until SDK ships to a public registry. License declared via
# [workspace.package]; no deny.toml carve-out required.
publish = false

[dependencies]
pep508_rs.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
unicode-normalization.workspace = true
url.workspace = true

[dev-dependencies]
assert_matches.workspace = true
insta.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
rstest.workspace = true

[lints]
workspace = true
