[package]
name = "influxdb3-plugin-schemas"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Schema types for InfluxDB 3 plugins."
repository = "https://github.com/influxdata/influxdb3-plugin-sdk"
publish = true

[dependencies]
pep508_rs.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true
unicode-normalization.workspace = true
url.workspace = true

[dev-dependencies]
assert_matches.workspace = true
insta.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
rstest.workspace = true

[lints]
workspace = true
