[package]
name = "influxdb3-plugin-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Author-side packaging library for InfluxDB 3 plugins."
readme = "README.md"
# publish = false until SDK ships to a public registry. License declared via
# [workspace.package]; no deny.toml carve-out required.
publish = false

[dependencies]
# Local deps
influxdb3-plugin-schemas.workspace = true

# crates.io dependencies
flate2.workspace = true
semver.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
tree-sitter-python.workspace = true
url.workspace = true
walkdir.workspace = true

[dev-dependencies]
filetime.workspace = true
insta.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
tempfile.workspace = true

[build-dependencies]
semver.workspace = true

[lints]
workspace = true
