[package]
name = "influxdb3-plugin-sdk"
version = "0.4.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Author-side packaging library for InfluxDB 3 plugins."
repository = "https://github.com/influxdata/influxdb3-plugin-sdk"
publish = true

[dependencies]
# Local deps
influxdb3-plugin-schemas.workspace = true

# crates.io dependencies
flate2.workspace = true
ignore.workspace = true
semver.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
tree-sitter-python.workspace = true
url.workspace = true
walkdir.workspace = true

[dev-dependencies]
filetime.workspace = true
insta.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
rstest.workspace = true
tempfile.workspace = true

[build-dependencies]
semver.workspace = true

[lints]
workspace = true
